--- a/src/main/webapp/WEB-INF/css/additional.css
+++ b/src/main/webapp/WEB-INF/css/additional.css
@@ -1,21 +1,47 @@
 html {
-  background: url(images/backgrounds/background1/.jpg) no-repeat center center fixed;
+  background: no-repeat center center fixed;
   webkit-background-size: cover;
   moz-background-size: cover;
   o-background-size: cover;
   background-size: cover;
 }
-
 body{
   background-color: rgba(0, 0, 0, 0);
-  margin: 0 auto;
-  color: SlateGray;
+  padding: 15px 20px;
+  color: white;
+  position: relative;
+  font-family: fangsong;
+  font-weight: bold;
+  font-size: x-large;
 }
-
-.card {
-  background-color: rgba(245, 245, 245, 1);
-}
-
-.ele {
+ele {
   border: 1px black solid;
+}
+input[type=text]:focus {
+    background-color: Salmon;
+}
+table{
+    border-collapse: collapse;
+    font-size: x-large;
+    text-indent: 10px;
+    font-style:italic;
+}
+TD, TH {
+    padding: 3px;
+   }
+.textcols {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	width: 60%;
+}
+.textcols-item {
+	display: flex;
+	flex-direction: column;
+	flex-basis: 100%;
+	flex: 1;
+	height: 30%;
+}
+.textcols-item + .textcols-item {
+	margin-left: 20%;
 }
